fix link color so its visible -_-
Former-commit-id: cc25406858fd97bc3dd33b2c1935f6ed83255c73

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -152,7 +152,7 @@ form input[type=submit] {
 }
 
 a {
-  color: white;
+  color: #000;
 }
 
 a:hover {
